tests/snapshots/integration_tests__manage_detached_head.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Cannot get management state in detached HEAD
