tests/snapshots/integration_tests__manage_drift_init.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch drift-feature is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will sync PRs only, but will not push drift-feature itself.
