tests/snapshots/integration_tests__manage_invalid_config.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] Invalid gherritManaged value: bad-value. Expected managedPublic, managedPrivate, or false.
