tests/snapshots/integration_tests__manage_toggle_switch_public.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch visibility-feature is now managed by GHerrit in public mode.
[gherrit]   - 'git push' will sync PRs and will also push visibility-feature itself.
